Add option for tabbed layout

--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -1,4 +1,4 @@
-<div class="queue">
+<div class="queue active" id="queue-tab">
     <h2>$T('menu-queue')</h2>
 
     <div class="info-container" data-bind="visible: diskSpaceLeft1()" style="display: none;">
