--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -1,4 +1,4 @@
-<div class="history" data-bind="visible: hasHistory()" style="display: none;">
+<div class="history" id="history-tab" data-bind="visible: hasHistory() || displayTabbed()">
     <h2>$T('menu-history')</h2>
     <table class="table table-hover history-table paginated">
         <thead>
