--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -357,6 +357,14 @@
                             </div>
                             <div class="form-group form-checkbox">
                                 <label class="col-sm-6 control-label">
+                                    $T("Glitter-displayTabbed")
+                                </label>
+                                <div class="col-sm-4">
+                                    <input type="checkbox" name="displayTabbed" value="true" data-bind="checked: displayTabbed" />
+                                </div>
+                            </div>
+                            <div class="form-group form-checkbox">
+                                <label class="col-sm-6 control-label">
                                     $T("Glitter-confirmDeleteQueue")
                                 </label>
                                 <div class="col-sm-4">
