Fix tabbed navigation for Glitter Night

--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -43,7 +43,8 @@ legend,
     color: white !important;
 }
 
-.main-restarting {
+.main-restarting,
+.nav-tabs>li>a {
     color: white !important;
 }
 
@@ -87,7 +88,7 @@ legend,
 .nav-tabs>li.active>a:hover,
 .nav-tabs>li>a:hover {
     background-color: #ddd;
-    color: #555;
+    color: #555 !important;
     box-shadow: 0px -1px 1px 1px rgba(0,0,0,0.15);
 }
 
@@ -100,7 +101,8 @@ legend,
 .multioperations-selector,
 .pagination li.active span,
 .pagination li span:hover,
-.dropdown-menu .divider {
+.dropdown-menu .divider,
+.history-queue-swicher .badge {
     background-color: #444444;
     color: #EBEBEB;
 }
@@ -183,6 +185,12 @@ legend, hr {
 
 #modal-item-files .item-files-table td {
     border-bottom: none !important;
+}
+
+.history-queue-swicher .nav-tabs>li>a,
+.history-queue-swicher .nav-tabs>li.active>a  {
+    border-bottom: none;
+    margin-bottom: 1px;
 }
 
 .queue-item .dropdown-menu:after, 
